# Chaum-Pedersen-zkp

./: Cargo.toml  README.md  build.rs
proto/: auth.proto
src/: auth.rs  client.rs  constants.rs  lib.rs  main.rs  server.rs
tests/: test.rs
