[package]
name = "chaum-pedersen-zkp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
num-bigint = {version = "0.4", features = ["rand"]}
hex = "0.4.3"
tonic = "0.11.0"
prost = "0.12.3"
protoc = "2.28.0"

[build-dependencies]
tonic-build = "0.11.0"
